Add the trajectory planner to the list of included subprojects

--- a/docker/Dockerfile-base
+++ b/docker/Dockerfile-base
@@ -65,7 +65,8 @@ RUN apt-get install -y \
       tmuxinator       \
       vim              \
       wget             \
-      iputils-ping
+      iputils-ping     \
+      libfftw3-dev
 
  #  GUI tools
 RUN apt-get install  -y \
